--- a/20200716-JacobHaff-NYCSchools/View/NYCHSCell.xib
+++ b/20200716-JacobHaff-NYCSchools/View/NYCHSCell.xib
@@ -7,9 +7,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NYCHSCell" customModule="_0200715_JacobHaff_NYCSchools" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NYCHSSchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NYCHSCell" rowHeight="132" id="KGk-i7-Jjw" customClass="NYCHSCell" customModule="_0200715_JacobHaff_NYCSchools" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NYCHSCell" rowHeight="132" id="KGk-i7-Jjw" customClass="NYCHSSchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="315" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
