--- a/20200716-JacobHaff-NYCSchools/View/Base.lproj/Main.storyboard
+++ b/20200716-JacobHaff-NYCSchools/View/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--View Controller-->
         <scene sceneID="qO4-gC-uum">
             <objects>
-                <viewController id="h6V-h2-76r" customClass="NYCHSViewController" customModule="_0200715_JacobHaff_NYCSchools" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="h6V-h2-76r" customClass="NYCHSViewController" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Z4R-4M-UHn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,10 +41,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KvG-hp-Sxp"/>
                     </view>
-                    <navigationItem key="navigationItem" id="1aj-S2-okf"/>
+                    <navigationItem key="navigationItem" id="1aj-S2-okf">
+                        <barButtonItem key="rightBarButtonItem" title="Sort" id="9sD-nw-upy">
+                            <connections>
+                                <action selector="sortButtonPressed:" destination="h6V-h2-76r" id="kgN-6J-XKe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="OWK-pi-u2M" id="faP-ot-X72"/>
-                        <segue destination="e3b-RT-iLb" kind="show" id="108-30-eJp"/>
+                        <segue destination="e3b-RT-iLb" kind="show" identifier="HSDetailsSegue" id="108-30-eJp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6p-cT-i8c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -64,7 +70,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HSOverViewTableViewCell" rowHeight="52" id="naC-0e-4nI" userLabel="HSOverviewTableViewCell" customClass="HSOverviewTableViewCell" customModule="_0180817_AfnanMirza_NYCSchools" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HSOverViewTableViewCell" rowHeight="52" id="naC-0e-4nI" userLabel="HSOverviewTableViewCell" customClass="HSOverviewTableViewCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="374" height="52"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="naC-0e-4nI" id="rFI-fr-3xn">
@@ -89,7 +95,7 @@
                                         </tableViewCellContentView>
                                         <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="popopop" rowHeight="165" id="N4g-Nd-BPn" userLabel="HSOverviewTableViewCell" customClass="HSOverviewTableViewCell" customModule="_0180817_AfnanMirza_NYCSchools" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="popopop" rowHeight="165" id="N4g-Nd-BPn" userLabel="HSOverviewTableViewCell" customClass="HSOverviewTableViewCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="80" width="374" height="165"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N4g-Nd-BPn" id="UfT-Yv-8da">
@@ -129,7 +135,7 @@
                                             <outlet property="hsOverviewLbl" destination="Kz1-wh-OUz" id="xjk-51-WkM"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HSContactTableViewCell" rowHeight="126" id="FfC-2H-x2L" customClass="HSContactTableViewCell" customModule="_0180817_AfnanMirza_NYCSchools" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HSContactTableViewCell" rowHeight="126" id="FfC-2H-x2L" customClass="HSContactTableViewCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="245" width="374" height="126"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FfC-2H-x2L" id="QQE-0G-E3B">
@@ -183,7 +189,7 @@
                                             <outlet property="hsWebsiteLbl" destination="Hep-0X-JhN" id="mbs-Fg-YZv"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HSAddressTableViewCell" rowHeight="165" id="Abs-GQ-6Vo" customClass="HSAddressTableViewCell" customModule="_0180817_AfnanMirza_NYCSchools" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="HSAddressTableViewCell" rowHeight="165" id="Abs-GQ-6Vo" customClass="HSAddressTableViewCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="371" width="374" height="165"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Abs-GQ-6Vo" id="FLE-cj-ANe">
