Refactored networking layer completely. Up next: Render details page properly

--- a/20200716-JacobHaff-NYCSchools/View/Base.lproj/Main.storyboard
+++ b/20200716-JacobHaff-NYCSchools/View/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="OWK-pi-u2M" id="faP-ot-X72"/>
-                        <segue destination="e3b-RT-iLb" kind="show" identifier="HSDetailsSegue" id="108-30-eJp"/>
+                        <segue destination="e3b-RT-iLb" kind="show" identifier="HSDetailsSegue" id="Sts-KO-4cn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6p-cT-i8c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
