--- a/20200716-JacobHaff-NYCSchools/View/NYCHSCell.xib
+++ b/20200716-JacobHaff-NYCSchools/View/NYCHSCell.xib
@@ -7,97 +7,110 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NYCHSSchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NYCHSSchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
+            <connections>
+                <outlet property="cardView" destination="Qpf-IY-127" id="lz5-H8-mGh"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NYCHSCell" rowHeight="132" id="KGk-i7-Jjw" customClass="NYCHSSchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="315" height="132"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="lol" rowHeight="134" id="KGk-i7-Jjw" customClass="NYCHSSchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="315" height="134"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="315" height="132"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" userLabel="cell">
+                <rect key="frame" x="0.0" y="0.0" width="315" height="134"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GeY-ry-ROe">
-                        <rect key="frame" x="0.0" y="45.5" width="315" height="41"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qpf-IY-127" userLabel="Card View">
+                        <rect key="frame" x="0.0" y="10" width="315" height="114"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="School Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTE-rs-6D1">
-                                <rect key="frame" x="0.0" y="0.0" width="315" height="20.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="School City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAG-Xf-q90">
-                                <rect key="frame" x="0.0" y="20.5" width="315" height="20.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GeY-ry-ROe">
+                                <rect key="frame" x="103.5" y="36.5" width="108" height="41"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="School Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTE-rs-6D1">
+                                        <rect key="frame" x="0.0" y="0.0" width="108" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="School City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAG-Xf-q90">
+                                        <rect key="frame" x="0.0" y="20.5" width="108" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="asM-4c-PZU">
+                                <rect key="frame" x="225" y="0.0" width="90" height="26"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2400" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qP-eH-BkF">
+                                        <rect key="frame" x="24" y="3" width="45" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="Em0-dr-ZGO"/>
+                                    <constraint firstAttribute="width" constant="90" id="qgl-Mw-oL5"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="-8" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-28-hNC">
+                                <rect key="frame" x="0.0" y="74" width="315" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7u-0D-TqT" userLabel="Navigate">
+                                        <rect key="frame" x="0.0" y="0.0" width="101" height="40"/>
+                                        <state key="normal" image="Navigate Button"/>
+                                        <connections>
+                                            <action selector="navigateButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DEz-47-Ca9"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWE-ES-cjY" userLabel="Call">
+                                        <rect key="frame" x="93" y="0.0" width="128" height="40"/>
+                                        <state key="normal" image="Call Button"/>
+                                        <connections>
+                                            <action selector="callButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="TFf-cC-AZh"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ruo-lc-npR" userLabel="Details">
+                                        <rect key="frame" x="213" y="0.0" width="102" height="40"/>
+                                        <state key="normal" image="Details Button"/>
+                                        <connections>
+                                            <action selector="detailsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DUN-8p-14Y"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                    </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="asM-4c-PZU">
-                        <rect key="frame" x="222" y="3" width="90" height="26"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2400" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qP-eH-BkF">
-                                <rect key="frame" x="24" y="3" width="45" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.1686073542" green="0.1764897406" blue="0.3607360423" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="90" id="F5j-bO-Oa1"/>
-                            <constraint firstAttribute="height" constant="26" id="GZc-Qc-ej2"/>
+                            <constraint firstItem="asM-4c-PZU" firstAttribute="top" secondItem="Qpf-IY-127" secondAttribute="top" id="BPC-Oq-u6n"/>
+                            <constraint firstItem="GeY-ry-ROe" firstAttribute="centerY" secondItem="Qpf-IY-127" secondAttribute="centerY" id="EMH-8b-iYG"/>
+                            <constraint firstItem="Bd6-28-hNC" firstAttribute="leading" secondItem="Qpf-IY-127" secondAttribute="leading" id="QGh-Pj-4g7"/>
+                            <constraint firstAttribute="bottom" secondItem="Bd6-28-hNC" secondAttribute="bottom" id="aso-ki-zBF"/>
+                            <constraint firstAttribute="trailing" secondItem="Bd6-28-hNC" secondAttribute="trailing" id="cor-RG-dQs"/>
+                            <constraint firstAttribute="trailing" secondItem="asM-4c-PZU" secondAttribute="trailing" id="g7W-b6-i2a"/>
+                            <constraint firstItem="GeY-ry-ROe" firstAttribute="centerX" secondItem="Qpf-IY-127" secondAttribute="centerX" id="pKf-Ru-jDH"/>
+                            <constraint firstAttribute="trailing" secondItem="asM-4c-PZU" secondAttribute="trailing" id="sGR-vr-Tzs"/>
                         </constraints>
                     </view>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="-8" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-28-hNC">
-                        <rect key="frame" x="5" y="92" width="181" height="40"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7u-0D-TqT" userLabel="Navigate">
-                                <rect key="frame" x="0.0" y="0.0" width="101" height="40"/>
-                                <state key="normal" image="Navigate Button"/>
-                                <connections>
-                                    <action selector="navigateButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DEz-47-Ca9"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWE-ES-cjY" userLabel="Call">
-                                <rect key="frame" x="93" y="0.0" width="88" height="40"/>
-                                <state key="normal" image="Call Button"/>
-                                <connections>
-                                    <action selector="callButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="TFf-cC-AZh"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                    </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ruo-lc-npR" userLabel="Details">
-                        <rect key="frame" x="208" y="92" width="102" height="40"/>
-                        <state key="normal" image="Details Button"/>
-                        <connections>
-                            <action selector="detailsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DUN-8p-14Y"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="asM-4c-PZU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="J80-fV-8Hz"/>
-                    <constraint firstItem="GeY-ry-ROe" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Mli-Lg-Zw0"/>
-                    <constraint firstItem="GeY-ry-ROe" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Vv5-lj-Lv4"/>
-                    <constraint firstAttribute="trailing" secondItem="ruo-lc-npR" secondAttribute="trailing" constant="5" id="Ymh-i7-YVe"/>
-                    <constraint firstAttribute="bottom" secondItem="Bd6-28-hNC" secondAttribute="bottom" id="YvL-zD-dpB"/>
-                    <constraint firstAttribute="trailing" secondItem="GeY-ry-ROe" secondAttribute="trailing" id="ZKB-pC-Kf6"/>
-                    <constraint firstItem="Bd6-28-hNC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="cGf-7I-9MX"/>
-                    <constraint firstAttribute="trailing" secondItem="asM-4c-PZU" secondAttribute="trailing" constant="3" id="lVr-RP-cf6"/>
-                    <constraint firstAttribute="bottom" secondItem="ruo-lc-npR" secondAttribute="bottom" id="vn3-Xe-4Ly"/>
-                    <constraint firstItem="GeY-ry-ROe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="xVp-pm-mUC"/>
+                    <constraint firstAttribute="bottom" secondItem="Qpf-IY-127" secondAttribute="bottom" constant="10" id="LKs-Lr-MBc"/>
+                    <constraint firstItem="Qpf-IY-127" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="TMd-4m-wf2"/>
+                    <constraint firstAttribute="trailing" secondItem="Qpf-IY-127" secondAttribute="trailing" id="hr1-8q-YYu"/>
+                    <constraint firstItem="Qpf-IY-127" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="vos-0C-izM"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="cardView" destination="H2p-sc-9uM" id="RED-cO-AGM"/>
                 <outlet property="schoolCityLabel" destination="BAG-Xf-q90" id="CLj-VM-ybZ"/>
                 <outlet property="schoolNameLabel" destination="aTE-rs-6D1" id="PPS-yt-mUo"/>
             </connections>
-            <point key="canvasLocation" x="113.768115942029" y="154.01785714285714"/>
+            <point key="canvasLocation" x="113.768115942029" y="179.46428571428569"/>
         </tableViewCell>
     </objects>
     <resources>
