--- a/20200716-JacobHaff-NYCSchools/View/SchoolCell.xib
+++ b/20200716-JacobHaff-NYCSchools/View/SchoolCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SchoolCell" rowHeight="150" id="KGk-i7-Jjw" customClass="SchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SchoolCell" rowHeight="150" id="KGk-i7-Jjw" customClass="SchoolCell" customModule="_0200716_JacobHaff_NYCSchools" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="334" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
